[package]
name = "ekho"
version = "0.1.0"
authors = ["alan20210202 <little_alanma@163.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
toml = "0.5.6"
bytes = "0.5.6"
pnet_transport = "0.27.2"
pnet_packet = "0.27.2"
log = "0.4.0"
dashmap = "3.11.10"
env_logger = "0.7.1"
once_cell = "1.4.1"
lazy_static = "1.4.0"
priority-queue = "1.0.0"
crossbeam-utils = "0.7.2"
crossbeam-channel = "0.4.4"
rand = "0.7"
num_enum = "0.5.1"
hex = "0.4.2"
chacha20poly1305 = "0.7.1"
anyhow = "1.0.35"
thiserror = "1.0.22"

[dependencies.parking_lot]
version = "0.11.1"
features = [ "deadlock_detection" ]

[dependencies.winapi]
version = "0.3.9"
features = [ "winsock2", "ws2ipdef", "mstcpip", "iphlpapi", "heapapi", "ipmib", "ifdef", "ntdef" ]

[build-dependencies]
env_logger = "0.7.1"
winres = "0.1.11"



