[package]
name = "ekho"
version = "0.1.0"
authors = ["alan20210202 <little_alanma@163.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
tokio = { version = "1.0.1", features = ["full"] }
toml = "0.5.6"
bytes = "0.5.6"
pnet_transport = "0.27.2"
pnet_packet = "0.27.2"
rustc-hash = "1.1.0"
dashmap = "3.11.10"
once_cell = "1.4.1"
lazy_static = "1.4.0"
rand = "0.7"
num_enum = "0.5.1"
hex = "0.4.2"
chacha20poly1305 = "0.7.1"
anyhow = "1.0.35"
thiserror = "1.0.22"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tracing-flame = "0.1.0"
# tracing-opentelemetry = "0.10.0"
tracing-futures = "0.2.4"
# opentelemetry-jaeger = "0.10.0"
derivative = "2.1.3"

[dependencies.parking_lot]
version = "0.11.1"
features = [ "deadlock_detection" ]

[dependencies.winapi]
version = "0.3.9"
features = [ "winsock2", "ws2ipdef", "mstcpip", "iphlpapi", "heapapi", "ipmib", "ifdef", "ntdef" ]

[build-dependencies]
env_logger = "0.7.1"
winres = "0.1.11"



